scrollbar issue resolved

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html,body {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
-  height: auto;
+  /* height: auto; */
 }
 body::-webkit-scrollbar {
   background-color: black;
